--- a/OrderDrinksApp/Base.lproj/Main.storyboard
+++ b/OrderDrinksApp/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
                                                         <pickerView contentMode="scaleToFill" horizontalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="tZW-by-HeL">
                                                             <rect key="frame" x="61" y="0.0" width="293" height="56"/>
                                                             <connections>
-                                                                <outlet property="dataSource" destination="OFZ-dT-MQr" id="boK-fs-Oz6"/>
+                                                                <outlet property="dataSource" destination="OFZ-dT-MQr" id="FWi-BJ-yNa"/>
                                                                 <outlet property="delegate" destination="OFZ-dT-MQr" id="60h-wV-VSm"/>
                                                             </connections>
                                                         </pickerView>
