--- a/OrderDrinksApp/Base.lproj/Main.storyboard
+++ b/OrderDrinksApp/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--可不可熟成紅茶-->
+        <!--店家清單-->
         <scene sceneID="UDl-cj-LvE">
             <objects>
                 <tableViewController id="0sE-c2-h3a" customClass="DrinksTableViewController" customModule="OrderDrinksApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="drinkCellId" textLabel="7VS-Yd-nsb" detailTextLabel="2Ay-S2-79P" rowHeight="71" style="IBUITableViewCellStyleSubtitle" id="nCY-Dr-wXa">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="drinkCellId" textLabel="7VS-Yd-nsb" rowHeight="71" style="IBUITableViewCellStyleDefault" id="nCY-Dr-wXa">
                                 <rect key="frame" x="0.0" y="28" width="414" height="71"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nCY-Dr-wXa" id="P6G-dY-xpW">
@@ -26,16 +26,9 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7VS-Yd-nsb">
-                                            <rect key="frame" x="20" y="13" width="41" height="26.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="356" height="70.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2Ay-S2-79P">
-                                            <rect key="frame" x="20" y="40.5" width="47" height="16"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -51,7 +44,7 @@
                             <outlet property="delegate" destination="0sE-c2-h3a" id="umg-ln-Dhw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="可不可熟成紅茶" id="I9l-Yv-MD4">
+                    <navigationItem key="navigationItem" title="店家清單" id="I9l-Yv-MD4">
                         <barButtonItem key="backBarButtonItem" title="Menu" id="YWi-9w-sLn"/>
                     </navigationItem>
                 </tableViewController>
@@ -490,6 +483,6 @@
         <image name="order" width="26.666666030883789" height="26.666666030883789"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1PO-Tc-aGa"/>
+        <segue reference="gWJ-rN-xlZ"/>
     </inferredMetricsTieBreakers>
 </document>
